# PTIT-Chatbot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/embeddings/: __init__.py  embedder.py  models.py
backend/app/generation/: __init__.py  citations.py  confidence.py  guardrails.py  llm.py  multi_query.py  prompts.py  query_rewriter.py  rag_chain.py
backend/app/guardrails/: __init__.py  history.py  models.py  normalization.py  patterns.py  scope.py  security.py
backend/app/ingestion/: __init__.py  chunker.py  cleaner.py  loaders.py  pipeline.py
backend/app/rag/: chunker.py  embeddings.py  llm.py  service.py  vector_store.py
backend/app/retrieval/: __init__.py  bm25.py  hybrid.py  multi_query.py  parent_child.py  reranker.py  retriever.py  test_retrieval.py
backend/app/vectordb/: __init__.py  base.py  chroma_store.py  json_store.py
backend/scripts/: evaluate.py  evaluate_ragas.py  ingest.py
backend/tests/: test_api_schemas.py  test_chroma_store.py  test_chunker.py  test_citations.py  test_conversation_memory.py  test_embeddings.py  test_guardrails.py  test_hybrid_retrieval.py  test_multi_query.py  test_prompts.py  test_ptit_faq.py  test_query_rewriter.py  test_rag_chain.py  test_reranker.py  test_retrieval_confidence.py
backend/tests/fixtures/: data.json  ptit_faq.json  ptit_ragas_100.json
data/: so-tay-sinh-vien-d21.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
