[project]
name = "ptit-chatbot-backend"
version = "0.1.0"
description = "FastAPI RAG backend for PTIT chatbot"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "openai>=1.35.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]
ml = [
  "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
