[project]
name = "ptit-chatbot-backend"
version = "0.1.0"
description = "FastAPI RAG backend for PTIT chatbot"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=1.1.13",
  "fastapi>=0.111.0",
  "openai>=1.35.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "rank-bm25>=0.2.2",
  "sqlalchemy>=2.0.30",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]
ml = [
  "sentence-transformers>=3.0.0",
]
eval = [
  "ragas>=0.4.3,<0.5.0",
  # Ragas 0.4.3 still imports modules removed from the LangChain 1.x line.
  "langchain>=0.3.27,<0.4.0",
  "langchain-core>=0.3.72,<0.4.0",
  "langchain-community>=0.3.27,<0.4.0",
  "langchain-openai>=0.3.28,<0.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
